# NDI-Web-Router

./: .gitignore  CMakeLists.txt  README.md  SECURITY_SETUP.md  build.bat  dev.bat  run.bat
.claude/: settings.local.json
NDI 6 SDK/: NDI SDK Examples.sln
NDI 6 SDK/Examples/C#/Managed NDI Find/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/Managed NDI Recv Advertiser/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/Managed NDI Recv Listener/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/Managed NDI Recv/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/Managed NDI Router/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/Managed NDI Send/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/NDILibDotNet2/: NDILibDotNet2.csproj
NDI 6 SDK/Examples/C#/NDILibDotNet2/Pinvoke/: Processing.NDI.Find.Interop.cs  Processing.NDI.FrameSync.Interop.cs  Processing.NDI.Lib.Interop.cs  Processing.NDI.Recv.Advertiser.Interop.cs  Processing.NDI.Recv.Interop.cs  Processing.NDI.Recv.List.Interop.cs  Processing.NDI.Recv.ex.Interop.cs  Processing.NDI.Routing.Interop.cs  Processing.NDI.Send.Interop.cs  Processing.NDI.compat.Interop.cs  Processing.NDI.deprecated.Interop.cs  Processing.NDI.structs.Interop.cs  Processing.NDI.utilities.Interop.cs
NDI 6 SDK/Examples/C#/NDILibDotNet2/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/WPF MediaElement Receiver/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C#/WPF NDI Send/Properties/: AssemblyInfo.cs
NDI 6 SDK/Examples/C++/NDIlib_Send_VirtualPTZ/: NDIlib_Send_VirtualPTZ.cpp
NDI 6 SDK/Examples/VB.Net/VB NDI Router/Properties/: AssemblyInfo.vb
NDI 6 SDK/Examples/VB.Net/VB NDI Send/Properties/: AssemblyInfo.vb
NDI 6 SDK/Examples/VB.Net/VB NDIlib Recv/Properties/: AssemblyInfo.vb
NDI 6 SDK/Examples/VB.Net/VB WPF NDI Send/Properties/: AssemblyInfo.vb
backend/include/: ndi_manager.h  web_server.h
backend/src/: main.cpp  ndi_manager.cpp  web_server.cpp
docs/: CENTOS_INSTALL.md  UBUNTU_INSTALL.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DestinationList.tsx  MatrixSwitcher.tsx  RouteList.tsx  RoutingMatrix.tsx  SourceList.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useMatrixSwitcher.ts  useNDI.ts  usePreview.ts  usePreviewMonitor.ts  useServerConnection.ts  useStudioMonitor.ts
frontend/src/lib/: api.ts
frontend/src/types/: ndi.ts
scripts/: build-linux.sh  install-linux.sh  setup-ndi-discovery.sh  uninstall-linux.sh
